@@ -935,6 +935,7 @@ extern int job_start_data(job_desc_msg_t *job_desc_msg,
 	uint32_t min_nodes, max_nodes, req_nodes;
 	int i, rc = SLURM_SUCCESS;
 	time_t now = time(NULL), start_res;
+	List preemptee_job_list = NULL;
 
 	job_ptr = find_job_record(job_desc_msg->job_id);
 	if (job_ptr == NULL)
@@ -1003,15 +1004,15 @@ extern int job_start_data(job_desc_msg_t *job_desc_msg,
 			max_nodes = MIN(job_ptr->details->max_nodes, 
 					part_ptr->max_nodes);
 		max_nodes = MIN(max_nodes, 500000);	/* prevent overflows */
-		if (!job_ptr->limit_set_max_nodes 
-		    && job_ptr->details->max_nodes)
+		if (!job_ptr->limit_set_max_nodes &&
+		    job_ptr->details->max_nodes)
 			req_nodes = max_nodes;
 		else
 			req_nodes = min_nodes;
 
 		rc = select_g_job_test(job_ptr, avail_bitmap,
 				min_nodes, max_nodes, req_nodes, 
-				SELECT_MODE_WILL_RUN);
+				SELECT_MODE_WILL_RUN, &preemptee_job_list);
 	}
 
 	if (rc == SLURM_SUCCESS) {
@@ -1029,14 +1030,16 @@ extern int job_start_data(job_desc_msg_t *job_desc_msg,
 		resp_data->start_time = MAX(job_ptr->start_time, start_res);
 		job_ptr->start_time   = 0;  /* restore pending job start time */
 		resp_data->node_list  = bitmap2node_name(avail_bitmap);
-		FREE_NULL_BITMAP(avail_bitmap);
+// FIXME: Add preemptee job list to response
 		*resp = resp_data;
-		return SLURM_SUCCESS;
 	} else {
-		FREE_NULL_BITMAP(avail_bitmap);
-		return ESLURM_REQUESTED_NODE_CONFIG_UNAVAILABLE;
+		rc = ESLURM_REQUESTED_NODE_CONFIG_UNAVAILABLE;
 	}
 
+	if (preemptee_job_list)
+		list_destroy(preemptee_job_list);
+	FREE_NULL_BITMAP(avail_bitmap);
+	return rc;
 }
 
 /*
